--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@types/react": "^18.2.19",
     "@types/react-dom": "^18.2.7",
     "axios": "^1.4.0",
-    "mapbox-gl": "^2.15.0",
+    "mapbox-gl": "2.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-map-gl": "7.0.20",
