--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "@types/react": "^18.2.19",
     "@types/react-dom": "^18.2.7",
     "axios": "^1.4.0",
-    "mapbox-gl": "^2.15.0",
+    "mapbox-gl": "2.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-map-gl": "^7.0.19",
+    "react-map-gl": "7.0.20",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -35,7 +35,11 @@
     "production": [
       ">0.2%",
       "not dead",
-      "not op_mini all"
+      "not op_mini all",
+      "not safari < 10",
+      "not chrome < 51",
+      "not android < 5",
+      "not ie < 12"
     ],
     "development": [
       "last 1 chrome version",
