--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@types/react": "^18.2.19",
     "@types/react-dom": "^18.2.7",
     "axios": "^1.4.0",
+    "lodash": "^4.17.21",
     "mapbox-gl": "2.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-map-gl": "7.0.20",
+    "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -46,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.197"
   }
 }
