--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-map-gl": "7.0.20",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.0.7",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -50,6 +51,7 @@
     ]
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.197"
+    "@types/lodash": "^4.14.197",
+    "@types/styled-components": "^5.1.26"
   }
 }
